# FirstAidVox

./: .env.example  .gitignore  CONVERSATIONAL_SYSTEM_COMPLETION_SUMMARY.md  ELEVENLABS_FIX_SUMMARY.md  FINAL_IMPLEMENTATION_SUMMARY.md  INFINITE_LOOP_FIX_SUMMARY.md  MULTILINGUAL_IMPLEMENTATION_SUMMARY.md  README.md  VOICE_IMPLEMENTATION_SUMMARY.md  VOICE_OUTPUT_FIX_SUMMARY.md  docker-compose.yml  test-api.ps1  test-chat.ps1  test-complete-system.ps1  test-connection.js  test-conversational-english.ps1  test-conversational-korean-simple.ps1  test-conversational-system.html  test-conversational-system.ps1  test-final-system.ps1  test-frontend-integration.ps1  test-hospital-integration.ps1  test-multilingual-simple.ps1  test-multilingual.js  test-multilingual.ps1  test-tts-functionality.html  test-ui-improvements.html  test-voice-output.ps1  test_korean_direct.py  test_language_detection.py
.kiro/specs/ui-redesign/: design.md  requirements.md  tasks.md
backend/: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  main.py  pyproject.toml  test_health.py  test_manual_search.py  test_rag.py  test_search_debug.py  test_settings.py
backend/.kiro/specs/firstaidvox-backend/: design.md  requirements.md  tasks.md
backend/app/: __init__.py  main.py
backend/app/handlers/: __init__.py  multimodal.py
backend/app/models/: __init__.py  chat.py  error.py  hospital.py  internal.py  location.py
backend/app/services/: __init__.py  ai_service.py  ai_service_conversational.py  location_service.py  search_service.py  service_manager.py
backend/config/: logging.py  settings.py
backend/deploy/: README.md  cloud-run-service.yaml  cloudbuild.yaml  deploy.ps1  deploy.sh  environment-template.env
backend/tests/: test_api_property.py  test_logging_property.py  test_models_basic.py  test_models_property.py  test_services_property.py  test_startup_configuration.py
frontend/: Dockerfile  README.md  debug-chat.html  debug-send-button.html  index.html  tailwind.config.js  test-backend.html  test-complete-fix.html  test-elevenlabs-fix.html  test-elevenlabs-voice.html  test-infinite-loop-fix.html  test-medical-card.html  test-microphone-debug.html  test-send-button.html  test-voice-agent.html  test-voice-fix.html  test-voice-integration.html  vite.config.ts
frontend/src/: App.tsx  debug-main.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/: CameraInterface.tsx  MapComponent.tsx  ReportCard.tsx  VoiceInterface.tsx  WaveformVisualizer.tsx
frontend/src/hooks/: useAppState.ts  useVoiceAgent.ts
frontend/src/services/: README.md  backendService.ts  connectionMonitor.ts  conversationalService.ts  errorHandler.ts  index.ts  offlineFallback.ts  (+1 more)
(+51 files in other folders)
